--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:theme="@style/CustomToolbarStyle">
 
-</android.support.constraint.ConstraintLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/searchIcon"
+                style="@style/CustomToolbarIconStyle"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/ic_search_white"/>
+
+            <ImageView
+                android:id="@+id/resetSearchIcon"
+                style="@style/CustomToolbarIconStyle"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/ic_close_white"/>
+
+            <ImageView
+                android:id="@+id/backIcon"
+                style="@style/CustomToolbarIconStyle"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/ic_back_white"/>
+
+            <TextView
+                android:id="@+id/titleText"
+                style="@style/CustomToolbarTextStyle"
+                android:layout_marginRight="56dp"
+                android:ellipsize="end"/>
+
+            <EditText
+                android:id="@+id/searchEditText"
+                style="@style/CustomToolbarTextStyle"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="56dp"
+                android:hint="@string/search_hint"
+                android:background="@null"
+                android:textCursorDrawable="@null"
+                android:imeOptions="actionSearch"/>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
+
+</LinearLayout>
