--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#EF6C00</color>
+    <color name="colorPrimaryDark">#E65100</color>
+    <color name="colorAccent">#00B0FF</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
+    <!-- Toolbar item colors -->
+    <color name="toolbarBackgroundColor">@color/colorPrimary</color>
+    <color name="toolbarTextColor">@color/white</color>
+    <color name="toolbarHintColor">#99FFFFFF</color>
+    <color name="toolbarTextBackgroundColor">#99FFFFFF</color>
 </resources>
